@@ -37,6 +37,7 @@ from bzrlib import (
 
 from bzrlib.decorators import needs_read_lock, needs_write_lock
 from bzrlib.repository import (
+    CommitBuilder,
     MetaDirRepository,
     MetaDirRepositoryFormat,
     RepositoryFormat,
@@ -76,7 +77,17 @@ class _KnitParentsProvider(object):
 class KnitRepository(MetaDirRepository):
     """Knit format repository."""
 
-    _serializer = xml5.serializer_v5
+    # make an manually, or incorrectly initialised KnitRepository object
+    # invalid
+    _commit_builder_class = None
+    _serializer = None
+
+    def __init__(self, _format, a_bzrdir, control_files, _revision_store,
+        control_store, text_store, _commit_builder_class, _serializer):
+        MetaDirRepository.__init__(self, _format, a_bzrdir, control_files,
+            _revision_store, control_store, text_store)
+        self._commit_builder_class = _commit_builder_class
+        self._serializer = _serializer
 
     def _warn_if_deprecated(self):
         # This class isn't deprecated
@@ -233,38 +244,6 @@ class KnitRepository(MetaDirRepository):
         return _KnitParentsProvider(self._get_revision_vf())
 
 
-class KnitRepository3(KnitRepository):
-
-    # knit3 repositories need a RootCommitBuilder
-    _commit_builder_class = RootCommitBuilder
-
-    def __init__(self, _format, a_bzrdir, control_files, _revision_store,
-                 control_store, text_store):
-        KnitRepository.__init__(self, _format, a_bzrdir, control_files,
-                              _revision_store, control_store, text_store)
-        self._serializer = xml7.serializer_v7
-
-    def deserialise_inventory(self, revision_id, xml):
-        """Transform the xml into an inventory object. 
-
-        :param revision_id: The expected revision id of the inventory.
-        :param xml: A serialised inventory.
-        """
-        result = self._serializer.read_inventory_from_string(xml)
-        assert result.root.revision is not None
-        return result
-
-    def serialise_inventory(self, inv):
-        """Transform the inventory object into XML text.
-
-        :param revision_id: The expected revision id of the inventory.
-        :param xml: A serialised inventory.
-        """
-        assert inv.revision_id is not None
-        assert inv.root.revision is not None
-        return KnitRepository.serialise_inventory(self, inv)
-
-
 class RepositoryFormatKnit(MetaDirRepositoryFormat):
     """Bzr repository knit format (generalized). 
 
@@ -282,6 +261,13 @@ class RepositoryFormatKnit(MetaDirRepositoryFormat):
     # Set this attribute in derived classes to control the repository class
     # created by open and initialize.
     repository_class = None
+    # Set this attribute in derived classes to control the
+    # _commit_builder_class that the repository objects will have passed to
+    # their constructor.
+    _commit_builder_class = None
+    # Set this attribute in derived clases to control the _serializer that the
+    # repository objects will have passed to their constructor.
+    _serializer = xml5.serializer_v5
 
     def _get_control_store(self, repo_transport, control_files):
         """Return the control store for this repository."""
@@ -373,7 +359,9 @@ class RepositoryFormatKnit(MetaDirRepositoryFormat):
                               control_files=control_files,
                               _revision_store=_revision_store,
                               control_store=control_store,
-                              text_store=text_store)
+                              text_store=text_store,
+                              _commit_builder_class=self._commit_builder_class,
+                              _serializer=self._serializer)
 
 
 class RepositoryFormatKnit1(RepositoryFormatKnit):
@@ -393,6 +381,8 @@ class RepositoryFormatKnit1(RepositoryFormatKnit):
     """
 
     repository_class = KnitRepository
+    _commit_builder_class = CommitBuilder
+    _serializer = xml5.serializer_v5
 
     def __ne__(self, other):
         return self.__class__ is not other.__class__
@@ -425,9 +415,11 @@ class RepositoryFormatKnit3(RepositoryFormatKnit):
      - support for recording tree-references
     """
 
-    repository_class = KnitRepository3
+    repository_class = KnitRepository
+    _commit_builder_class = RootCommitBuilder
     rich_root_data = True
     supports_tree_reference = True
+    _serializer = xml7.serializer_v7
 
     def _get_matching_bzrdir(self):
         return bzrdir.format_registry.make_bzrdir('dirstate-with-subtree')
