@@ -18,6 +18,7 @@ from bzrlib import cache_utf8, inventory, errors, xml5
 
 
 class Serializer_v6(xml5.Serializer_v5):
+    """This serialiser adds rich roots."""
 
     format_num = '6'
     root_id = None
@@ -37,7 +38,18 @@ class Serializer_v6(xml5.Serializer_v5):
             xml5._encode_and_escape(inv.root.name),
             xml5._encode_and_escape(inv.root.revision)))
 
-    def _unpack_inventory(self, elt):
+    def _check_revisions(self, inv):
+        """Extension point for subclasses to check during serialisation.
+
+        By default no checking is done.
+
+        :param inv: An inventory about to be serialised, to be checked.
+        :raises: AssertionError if an error has occured.
+        """
+        assert inv.revision_id is not None
+        assert inv.root.revision is not None
+
+    def _unpack_inventory(self, elt, revision_id=None):
         """Construct from XML Element"""
         if elt.tag != 'inventory':
             raise errors.UnexpectedInventoryFormat('Root tag is %r' % elt.tag)
@@ -52,6 +64,7 @@ class Serializer_v6(xml5.Serializer_v5):
         for e in elt:
             ie = self._unpack_entry(e)
             inv.add(ie)
+        assert inv.root.revision is not None
         return inv
 
 
